# jellyfuzz

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: fuzzer.rs  main.rs
src/code_generators/: ast_helpers.rs  code_generator.rs  il.rs  mod.rs
src/corpus/: manager.rs  mod.rs
src/mutators/: elements.rs  expressions.rs  js_types.rs  literals.rs  minifier.rs  mod.rs  operators.rs  scope.rs  splice.rs
src/mutators/js_objects/: js_objects.rs  js_types.rs  mod.rs
src/mutators/literals/: array_mutator.rs  boolean_flipper.rs  constructor_call.rs  literals.rs  mod.rs  numeric_tweaker.rs
src/parsing/: parser.rs
src/profiles/: mod.rs  profile.rs  v8.rs
src/runner/: coverage.rs  mod.rs  pool.rs  process.rs  target.rs
src/utils/: mod.rs  rand_utils.rs  state.rs
