[package]
name = "jellyfuzz"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
libc = "0.2.177"
swc_common = "16.0.0"
swc_ecma_codegen = "19.0.0"
swc_ecma_parser = "26.0.1"
swc_ecma_visit = "17.0.0"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
cc = "1.2.43"
