[package]
name = "jellyfuzz"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.177"
rand = "0.9.2"
swc_atoms = "8.0.2"
swc_common = "16.0.0"
swc_ecma_codegen = "19.0.0"
swc_ecma_parser = "26.0.1"
swc_ecma_visit = "17.0.0"
tokio = { version = "1.48.0", features = ["full"] }
weighted_rand = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"

[build-dependencies]
cc = "1.2.43"
